Prevent horizontal overflow in IE
Fixes DD 71427-205

--- a/pub/errors/somethingdigital/css/styles.css
+++ b/pub/errors/somethingdigital/css/styles.css
@@ -13,7 +13,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   box-sizing: border-box;
-  max-width: 900px;
+  max-width: auto;
   width: 100%;
   padding: 0 20px;
 }
